# finicky-whiskers

./: .gitignore  Makefile  README.md  global_config.json  package-lock.json  serve.sh  spin-morsel.toml  spin.toml  tally_test.sh
.github/workflows/: build.yml  deploy.yml  dispatch.yml  restart.yml  restartredis.yml
components/: fileserver.wasm  highscore.wasm  morsel_event.wasm  redirect.wasm  reset.wasm  scoreboard.wasm  tally.wasm
deploy/: README.md  finicky-whiskers.nomad
deploy/finicky-whiskers-www-redirect/: spin.toml
favicon/: favicon.wasm
highscore/: Cargo.toml  Makefile  migration.sql  spin.toml  test.http
highscore/src/: lib.rs
morsel_event/: Cargo.toml  Makefile  README.md  spin.toml
morsel_event/src/: lib.rs
nomad/: README.md  finicky-whiskers-aws.nomad  finicky-whiskers.nomad
redirect/: Makefile  README.md  go.mod  redirect.go
reset/: Cargo.toml  Makefile  README.md  go.mod  main.go
reset/src/: lib.rs
scoreboard/: Cargo.toml  Makefile  README.md
scoreboard/src/: lib.rs
session/: .gitignore  Gemfile  Makefile  README.md  spin.toml
session/.gem/specifications/: bundler-2.3.7.gemspec  ulid-1.3.0.gemspec
session/lib/: session.rb
sessionv2/: Makefile  package-lock.json  package.json  spin.toml
sessionv2/src/: index.ts
site/: Makefile  README.md  elements.html  index.html  package-lock.json  package.json
site/assets/css/: whiskers.css  whiskers.css.map
site/assets/js/: game.js
site/assets/scss/: whiskers.scss
site/static/: index.html
tally/: Cargo.toml  Makefile  README.md
tally/src/: lib.rs  tally.rs
tests/: test-server.sh
