[package]
name = "highscore"
authors = ["Mikkel Mørk Hegnhøj <mikkel@fermyon.com>"]
description = "Highscore service for Finicky Whiskers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.4.1" }
# ULID support
rusty_ulid = "1.0.0"
# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
