[package]
name = "scoreboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# Date library
chrono = "0.4"
# General-purpose crate with common HTTP types.
http = "0.2"
# ULID support
rusty_ulid = "1.0.0"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.4.1" }
# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
