[package]
name = "tally"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# Date library
chrono = "0.4"
# General-purpose crate with common HTTP types.
http = "0.2"
# ULID support
rusty_ulid = "1.0.0"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v0.4.0" }
# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "dde4694aaa6acf9370206527a798ac4ba6a8c5b8" }

